# voicee

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/app/: gunicorn_conf.py  main.py
backend/app/aiogram/: main.py
backend/app/aiogram/bot_content/: errors.py  features.py
backend/app/aiogram/bot_infra/: callbacks.py  filters.py  states.py
backend/app/aiogram/bot_lib/: aiogram_overloads.py  bot_feature.py  emojis.py  utils.py
backend/app/aiogram/db_infra/: __init__.py  db.py  models.py
backend/app/alembic/: env.py
backend/app/api/: routing.py
backend/app/api/auth/: config.py  manager.py
backend/app/api/routers/: routers_aggregator.py
backend/app/api/routers/auth/: __init__.py  auth_route.py  config.py  manager.py  utils.py
backend/app/bot_content/: features.py
backend/app/core/: config.py  log.py
backend/app/database/: db.py  models.py  schemas.py
backend/app/db_infra/: db.py
backend/src/: __init__.py  config.py  main.py
backend/src/bot_content/: features.py
backend/src/bot_infra/: callbacks.py  filters.py
backend/src/bot_lib/: aiogram_overloads.py  bot_feature.py
backend/src/db_infra/: __init__.py  db.py
frontend/: .gitignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: footer.tsx  navbar.tsx
frontend/src/constants/: common.ts  text.tsx
(+6 files in other folders)
